tests/unit-fail-compilation/j076f.ref
j076f.c:2:1: error: Conflicting types for a.
  Constraint violation (CV-TDG10). See C11 sec. 6.7:4
Translation failed (config dumped). Run kcc -d j076f.c to see commands run.
