tests/unit-fail-compilation/j076f.c
int a[5 * 2];
int a[5 + 2];

int main(void) {
      return 0;
}
